assets/styles/main.css
* {
  line-height: 1.5em;
  font-weight: bold;
}
body {
  overflow: hidden;
}
.clearing:after {
  content: "";
  display: table;
  clear: both;
}

/************
* Mobile drawers
************/
@media (max-width: 767px) {
  .drawer__body {
    position: absolute;
    width: 360px;
    height: 100%;
    box-sizing: border-box;
    z-index: 1;
    transition: 0.5s;
    background-color: inherit;
  }
  .drawer__overlay {
    position: absolute;
    height: 100%;
    width: 100%;
    z-index: 1;
    transition: 0.5s;
  }
  .drawer--left > .drawer__body {
    transform: translateX(-360px);
  }
  .drawer--left > .drawer__overlay {
    transform: translateX(-100%);
    width: 100%;
  }
  .drawer--right > .drawer__body {
    right: 0;
    transform: translateX(360px);
  }
  .drawer--right > .drawer__overlay {
    right: 0;
    transform: translateX(100%);
  }
  .drawer--left.is-open > .drawer__body,
  .drawer--left.is-open > .drawer__overlay,
  .drawer--right.is-open > .drawer__body,
  .drawer--right.is-open > .drawer__overlay {
    transform: translateX(0px);
  }
}

/*********************
 * Header filters block - turns into a RHS drawer on mobile
 *********************/
.filter-bar {
  background-color: #fff;
  color: #444;
  padding: 0px 12px;
}
.filter-bar__logo {
  display: none;
}
@media (min-width: 768px) {
  .filter-bar {
    background-color: #de392e;
    color: #fbfbfb;
    padding: 0px 12px;
  }
  .filter-bar__logo {
    display: block;
  }
}


/*********************
* Mobile Header, takes the place of the filter bar on small screens
*********************/
.header-mobile {
  background-color: #de392e;
  color: #fbfbfb;
  cursor: pointer;
  line-height:34px;
}
@media (min-width: 768px) {
  .header-mobile {
    display: none;
  }
}
.header-mobile__logo {
  float: left;
  padding: 10px;
  line-height: 34px;
}
.header-mobile__menu {
  float: right;
  padding: 10px;
  line-height: 34px;
}
.header-mobile__menu .material-icons {
  vertical-align: top;
  line-height: 34px;
}
.header-mobile__menu:hover {
  background: #f13c2f;
}

/*************
 *
 ***************/
.logo {
  font-size: 18px;
}
.logo--part {
  float: left;
  padding: 5px;
}
.logo--part img {
  width: 50px;
  display: none;
}
.logo--heading {
  text-align: center;
  border-bottom: 1px solid #fff;
  padding-bottom:2px;
  margin-bottom:2px;
}
.logo--tagline {
  font-size: 14px;
}
.dropdown-container {
  position: relative;
}
.dropdowns div {
  display:none;
}

body, .wrapper, .map-wrapper {
  height: 100%;
}
#map { position:absolute; top:0; bottom:0; width:100%; }
.map-wrapper {
  position: relative;
  z-index: 0;
}

.mapboxgl-popup-anchor-bottom .mapboxgl-popup-tip {
  border-top-color: #526b98;
}
.mapboxgl-popup-content {
  background: #526b98;
  padding: 6px 8px;
  color: #fff;
}
.mapboxgl-popup-close-button {
  display: none;
}


.autocomplete-item {
    list-style: none;
    padding: 6px;
}

.autocomplete-list {
    margin: 0;
    background: #e0534a;
    color: #fbfbfb;
    padding: 0;
}

.dropdown-container {
  z-index:1;
  height: 50px;
}
.autocomplete-item--key, .autocomplete-item--mouse {
    background-color: #f79a94;
    cursor: pointer;
}

.hide-overflow {
  overflow: hidden;
}


.grid__overflow-wrapper {
  position: relative;
  width: 330px;
  height: 240px;
  margin: 0;
  padding: 0!important;
  border-right: 1px solid #ccc;
  border-bottom: 1px solid #ccc;
  overflow: hidden;
}
.grid {
  width: 2000px;
  height: 2000px;
}
.grid__sticky-header {
  width: 2000px;
  height: 40px;
  margin-left: 55px;
  overflow: hidden;
  position: relative;
 }
.grid__sticky-column {
  float: left;
  width: 55px;
  height:1000px;
  clear: left;
  overflow:hidden;
}
.grid__table {
  border-spacing: 0;
}

.grid__cell {
  border-top: 1px solid #ccc;
  border-spacing:0;
  margin:0;
  padding:2px;
  font-size:12px;
  text-align:right;
  height: 40px;
  width: 50px;
  text-align: center;
  border-left: 1px solid #ccc;
  background-color: #fcfcfc;
}
.grid__cell--selectable {
  background-color: #fff;
}
.grid__cell--selectable:hover {
  cursor: pointer;
  background-color: #f7c6c3;
}
.grid__cell-selectable {
  background-color: #fff;
}
.grid__cell-selectable:hover {
  cursor: pointer;
  background-color: #f7c6c3;
}
.grid__cell--selected {
  background-color: #de392e;
  color: #fff;
}
.grid__cell--header {
  font-weight: bold;
  background-color: transparent;
  border: 0;
  float: left;
  box-sizing: border-box;
  line-height: 36px;
  border-left: 1px solid #ccc;
  border-top: 1px solid #ccc;
  width: 55px;
  background-color: #fbfbfb;
}

.grid__slider {
  position:relative;
  transition: 0.4s;
}
.grid__cell--empty {
  background-color: #fcfcfc;
}
.grid__controls > button {
  margin-right: 10px;
  margin-bottom: 10px;
}
.grid__controls--top {
  float: right;
  position: absolute;
  top: 320px;
  right: 80px;
}
.grid__controls--side {
  float: left;
  width: 40px;
  position: relative;
  top: 160px;
  position: absolute;
  right: 25px;
  top: 230px;
}


.search-overlay__content {
    height: 95%;
    width: 1000px;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    z-index: 2;
    margin-right: auto;
    margin-left: auto;
    background: #fcfcfc;
    border:  1px solid #ccc;
}
.search-overlay__background {
    width: 100%;
    height: 100%;
  
    position: absolute;
    top: 0;
    left: 0;
    z-index: 2;

    background-color: #cea7a7;
    opacity: 0.3;
}


.search-overlay__title {
  margin: 0;
  text-align:center;
  padding-top:20px;
  color: #fff;
  font-weight: bold;
}
.search-overlay__content {
}

.img-wrapper {
    height: 200px;
    overflow: hidden;
}

.location-background {
    background-image: url("/assets/img/banner-sml.jpg");
    background-position: center;
    background-size: cover;
    position: absolute;
    height: 100%;
    width: 100%;
    z-index: -2;
}

.background-overlay {
    background: #000;
    opacity: 0.5;
    height: 100%;
    width: 100%;
    position: absolute;
    z-index: -1;
}
.map__overlay {
    z-index: 1;
    width: 100%;
    display: none;
    height: 100%;
}
.map__overlay.is-active {
  display: block;
}
.absolute-center {
  position: absolute;
  margin-left: auto;
  margin-right: auto;
  right: 0;
  left: 0;
  top: 40%;
  z-index: 2;
}
.search-overlay__header {position: relative;height: 15%;margin-top: 0;}

ul {}

.unstyled {
    list-style: none;
    margin-left: 0;
    padding-left: 0;
    margin-top: 0;
}

.flight-search {
    overflow: auto;
    max-height: 80%;
}

.flight-search__close {
    color: white;
    float: right;
}

.flight-result__carrier > img {
    display: block;
    margin-left: auto;
    width: 80%;
    margin-right: auto;
}

.flight-result__carrier {
    text-align: center;
    display: block;
    margin-top: 10px;
    font-weight: lighter;
}

.flight-result__price {
    font-size: 21px;
    line-height: 42px;
    vertical-align: middle;
    text-align: center;
    font-weight: lighter;
}

.flight-result__details td {
    line-height: 24px;
    height: 24px;
    font-size: 16px;
    width: 100px;
    vertical-align: top;
}

.flight-result__airport {
    font-weight: lighter;
}

.flight-result__details i.material-icons {
    font-size: 16px;
    margin-left: 5px;
    margin: 0 10px;
}

.flight-result__duration {
    margin-left: 10px;
    font-weight: lighter;
    padding-left: 20px;
}

.flight-result {
    background: #fff;
    border: 1px solid #ccc;
    border-bottom: 0;
    padding: 20px;
}

.flight-search__list {
    padding: 0;
}

.flight-result__price {
}

button.mdl-button.mdl-button--raised.mdl-button--colored {}

.flight-result {}

.flight-result.is-active {
    border-left-color: #ef3f34;
    border-left-width: 4px;
}

.loading-spinner {
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  height: 28px;
  width: 28px;
}

.sidebar {
    position: absolute;
    background: #fff;
    height: 100%;
    z-index: 1;
    left: -430px;
    width: 430px;
    z-index:1;
    transform: translateX(430px);
    transition: 0.5s;
}

.sidebar--block > div {
    padding: 20px;
}
.sidebar__close {
    position: absolute;
    right: -30px;
    background: #fbfbfb;
    border-left: 0;
    top: 60px;
    border: 1px solid #ccc;
    padding: 12px 3px;
    border-left-width: 0;
    width: 30px;
}
.sidebar__close:hover {
    background: #de392e;
    cursor: pointer;
    color: #fff;
    border-color: #b73b32;
}
.sidebar.is-hidden {
    transform: translateX(0px);
}

.form-control select {
  margin: 0px 0;
}
.form-control select,
.form-control input {
      display: block;
      width: 100%;
      height: 34px;
      padding: 6px 12px;
      font-size: 14px;
      line-height: 1.42857143;
      color: #555;
      background-color: #fff;
      background-image: none;
      border: 1px solid #ccc;
      border-radius: 4px;
      box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
      transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
}
label {
  margin-bottom: 10px;
  display: block;
}
.date-inputs select,
.date-inputs input {
  width: 120px;
  float: left;
  margin-right: 20px;
}
.mapboxgl-popup {
  cursor: pointer
}
.mapboxgl-popup:hover .mapboxgl-popup-content {
  background-color: #de392e;
}
.mapboxgl-popup:hover .mapboxgl-popup-tip {
  border-top-color: #de392e;
}
.mdl-tabs__tab i {
    display: block;
    padding-top:4px;
    font-size: 21px;
}
.mdl-tabs__tab:hover {
  background: #fbfbfb;
  cursor: pointer;
}


.activities-title {
  margin-bottom: 20px;
}

.activities-title__heading {
  font-size: 21px;
  margin:0;
}
.activity {
  margin-top: 10px;
  background-color: #fff;
  padding: 10px 5px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
}
.activity__img > img {
  width: 100%;
}
.activity__content td {
  font-size: 12px;
  font-weight: normal;
}
.activity__img {width: 140px;padding: 5px;float: left;}

.activity__content {
    float: left;
    width: 200px;
}

.activity__title {
    font-size: 16px;
    line-height: 1.5em;
    margin: 0;
}

.origin-dropdown__content {
    position: absolute;
    background: #fff;
    z-index: 5;
    width: 260px;
    top: 100px;
    padding: 20px;
    display: none;
    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
    border-radius: 4px;
}
.origin-dropdown__airports {
  border-radius: 4px;
}
.origin-dropdown.is-active .origin-dropdown__content {
  display: block;
}
.origin-dropdown__content label {
    color: #444;
}

.origin-dropdown__triangle {
    border-width: 10px;
    border-color: transparent;
    border-bottom-color: white;
    position: absolute;
    border-style: solid;
    top: -20px;
    left: 10px;
}
.origin-dropdown__airports .material-icons {
  vertical-align: middle;

}
.origin-dropdown__airports:hover {
  cursor: pointer;
}
.mdl-tabs {
    height: 100%;
}

.map-wrapper {
    max-height: 90%;
}

.mdl-tab__panel {
    max-height: 90%;
    overflow: auto;
}

.filter-bar .mdl-switch {
  margin-top: 10px;
}
.mdl-switch.is-checked .mdl-switch__thumb {
  background-color: #fff;
}

.mdl-switch.is-checked .mdl-switch__track {
  background-color: rgba(244,244,244,.5);
}
.skyscanner-logo {
    position: absolute;
    z-index: 100;
    right: 0;
    top: 0;
    padding: 0;
    background-color: #526b98;
}
.attribution {
  text-align: center;
  font-style: italic;
}

